@@ -1,3 +1,8 @@
+2007-07-14  David Kastrup  <dak@gnu.org>
+
+	* gnus-art.el (gnus-mime-delete-part): Don't go through article-edit
+	finishing actions if we did not edit the article.
+
 2007-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-sum.el (gnus-summary-catchup): Don't recognize cached articles
